Fixed some styling for chrome on Win :P (now breaks on mac)

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,14 @@
+// VARIABLES
 $font_color:#000;
 $main_bg: #fb3e2a;
+
+// FONTS
+@font-face {
+	font-family: 'GROBOLD';
+	src: url('../fonts/GROBOLD.ttf');
+}
+
+// MAIN STYLES
 
 body {
   background: $main_bg;
@@ -15,9 +24,10 @@ body {
 
 #logo{
   padding-top: 50px;
+
   margin: 0 auto;
   width:  90vw;
-  max-width: 500px;
+  max-width: 800px;
 
   img{
     width: 100%;
@@ -25,21 +35,24 @@ body {
 }
 
 #upper{
-    height:  600px;
+    height:  400px;
     width: 100%;
     position: relative;
+    margin-top: 60px;
 
     #timerBox{
       font-family: 'GROBOLD';
       border-top: 1px solid $font_color;
       border-bottom: 1px solid $font_color;
       width:80%;
-      height: 9vw;
+      height: 12vw;
       overflow: hidden;;
-      margin: auto;
+      margin: 0 auto;
       position: absolute;
       padding-top: 10px;
-      top: 100px; left: 0; bottom: 0; right: 0;
+      padding-left: 30px;
+      top: 0px;
+      left: 0; bottom: 0; right: 0;
 
       #datepicker{
         width: 100%;
@@ -69,38 +82,38 @@ body {
 }
 
 
-#lower{
-    padding-top: 90px;
-    width: 80%;
-    height: 500px;
-    position: relative;
-    margin: 0 auto;
-
-    #header_text{
-      background-color: $main_bg;
-      height: 50px;
-      width: 100%;
-      border-bottom: 1px solid $font_color;
-      overflow: hidden;
-      font-size: 3em;;
-      padding-bottom: 20px;
-    }
-
-    #body_text{
-      padding-top: 20px;
-      width: 100%;
-      height: 400px;
-      background-color: $main_bg;
-      overflow: hidden;
-    }
-
-    .input-text{
-      font-family: 'Roboto-Light';
-      font-size: 2em;
-      color: $font_color;
-
-    }
-}
+// #lower{
+//     padding-top: 90px;
+//     width: 80%;
+//     height: 500px;
+//     position: relative;
+//     margin: 0 auto;
+//
+//     #header_text{
+//       background-color: $main_bg;
+//       height: 50px;
+//       width: 100%;
+//       border-bottom: 1px solid $font_color;
+//       overflow: hidden;
+//       font-size: 3em;;
+//       padding-bottom: 20px;
+//     }
+//
+//     #body_text{
+//       padding-top: 20px;
+//       width: 100%;
+//       height: 400px;
+//       background-color: $main_bg;
+//       overflow: hidden;
+//     }
+//
+//     .input-text{
+//       font-family: 'Roboto-Light';
+//       font-size: 2em;
+//       color: $font_color;
+//
+//     }
+// }
 
 .clearFormatInput{
   border: none;
